--- a/CodeCamp.Android/packages.config
+++ b/CodeCamp.Android/packages.config
@@ -9,10 +9,10 @@
   <package id="sqlite-net-pcl" version="1.0.9-alpha" targetFramework="MonoAndroid42" />
   <package id="SQLitePCL.raw_basic" version="0.5.0" targetFramework="MonoAndroid42" />
   <package id="Xam.Plugins.Settings" version="1.3.0.0" targetFramework="MonoAndroid44" />
-  <package id="Xamarin.Android.Support.v4" version="20.0.0.2" targetFramework="MonoAndroid42" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="20.0.0" targetFramework="MonoAndroid403" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="20.0.0" targetFramework="MonoAndroid403" />
-  <package id="Xamarin.Forms" version="1.2.2.6240-pre2" targetFramework="MonoAndroid42" />
-  <package id="Xamarin.Forms.Maps" version="1.2.2.6240-pre2" targetFramework="MonoAndroid42" />
-  <package id="Xamarin.GooglePlayServices" version="18.0.0.1" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Android.Support.v4" version="20.0.0.2" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="20.0.0" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="20.0.0" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Forms" version="1.2.1.6229" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.Forms.Maps" version="1.2.1.6229" targetFramework="MonoAndroid44" />
+  <package id="Xamarin.GooglePlayServices" version="18.0.0.1" targetFramework="MonoAndroid44" />
 </packages>
