--- a/CodeCamp/CodeCamp.csproj
+++ b/CodeCamp/CodeCamp.csproj
@@ -57,13 +57,9 @@
     <Compile Include="Views\SessionPage.cs" />
     <Compile Include="Views\LocationPage.cs" />
     <Compile Include="Views\AboutPage.cs" />
-    <Compile Include="Models\EvolveSample\Session.cs" />
-    <Compile Include="Models\EvolveSample\Speaker.cs" />
     <Compile Include="Data\CodeCampDatabase.cs" />
-    <Compile Include="Models\EvolveSample\Favorite.cs" />
     <Compile Include="Views\Cells\SessionCell.cs" />
     <Compile Include="Views\Cells\MenuHeader.cs" />
-    <Compile Include="Models\EvolveSample\SessionSpeaker.cs" />
     <Compile Include="Controls\TweetButton.cs" />
     <Compile Include="Views\Cells\SpeakerCell.cs" />
     <Compile Include="Views\SponsorsPage.xaml.cs">
@@ -73,6 +69,14 @@
       <DependentUpon>TwitterPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\MasterConference.cs" />
+    <Compile Include="Models\Database\Session.cs" />
+    <Compile Include="Models\Database\Speaker.cs" />
+    <Compile Include="Models\Database\Favorite.cs" />
+    <Compile Include="Models\Database\SessionSpeaker.cs" />
+    <Compile Include="Models\Database\Conference.cs" />
+    <Compile Include="Models\Database\Location.cs" />
+    <Compile Include="Models\Database\MasterConference.cs" />
+    <Compile Include="Models\Database\State.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
@@ -105,12 +109,6 @@
     </Reference>
     <Reference Include="System.Net.Http.Primitives">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.27-beta\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Primitives.dll</HintPath>
-    </Reference>
-    <Reference Include="Xamarin.Forms">
-      <HintPath>..\packages\Xamarin.Forms.Maps.1.2.2.6240-pre2\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.Maps.dll</HintPath>
-    </Reference>
-    <Reference Include="Xamarin.Forms">
-      <HintPath>..\packages\Xamarin.Forms.Maps.1.2.2.6240-pre2\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.Maps.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Core">
       <HintPath>..\packages\Xamarin.Forms.1.2.2.6240-pre2\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.Core.dll</HintPath>
